afp: Give a better error message for non-existent volume

Give a better error message when trying to mount a volume that doesn't
exist.

https://bugzilla.gnome.org/show_bug.cgi?id=735729